# westminster

./: .gitignore  README.md  env_vars.sh  environment.yml  pyproject.toml
.github/workflows/: release-new-version.yml
scripts/: borzoi_satg_gene_gpu.py  borzoi_test_genes_folds.py  westminster_classify.py  westminster_eval_folds.py  westminster_gnomad_folds.py  westminster_gtex_cmp.py  westminster_gtex_coef.py  westminster_gtex_egene.py  westminster_gtex_folds.py  westminster_gtexg_coef.py  westminster_gtexg_folds.py  westminster_train_folds.py  westminster_transfer_folds.py  westminster_transfer_folds_gcp.py
src/westminster/: gtex.py  gtf.py  multi.py  stats.py
src/westminster/notebooks/: cmp_eval.ipynb
src/westminster/scripts/: westminster_classify.py  westminster_eqtl_folds.py  westminster_eqtl_gtex.py  westminster_eqtl_gtexg.py  westminster_eqtlg_folds.py  westminster_eqtlsed_folds.py  westminster_eval_folds.py  westminster_evalg_folds.py  westminster_gnomad_folds.py  westminster_gnomad_folds_tf.py  westminster_gtex_cmp.py  westminster_gtex_coef.py  westminster_gtex_coef_tf.py  westminster_gtex_egene.py  westminster_gtex_folds.py  westminster_gtex_folds_tf.py  westminster_gtexg_coef.py  westminster_gtexg_folds.py  westminster_gtexsed_folds.py  westminster_paqtl_folds.py  westminster_paqtl_gtex.py  westminster_sqtl_folds.py  westminster_sqtl_gtex.py  westminster_torch_gtex_folds.py  westminster_train_composer.py  westminster_train_folds.py
tests/: test_classify.py
westminster/: multi.py  parse_gtf.py  stats.py
(+7 files in other folders)
